# AnimeVM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  avm.pro
designer/: MainWindow.ui  SeriesSettings.ui
inc/: Application.hpp  CMakeVars.hpp  CheckBoxDelegate.hpp  Data.hpp  Database.hpp  DirectoryList.hpp  Exceptions.hpp  IDClasses.hpp  MainWindow.hpp  Model.hpp  Series.hpp  SeriesSettings.hpp
qml/: main.qml
src/: Application.cpp  CMakeLists.txt  CMakeVars.cpp.in  CheckBoxDelegate.cpp  Data.cpp  Database.cpp  DirectoryList.cpp  MainWindow.cpp  Series.cpp  SeriesSettings.cpp  main.cpp
